--- a/src/content/docs/ecosystem/validators/validator-setup.mdx
+++ b/src/content/docs/ecosystem/validators/validator-setup.mdx
@@ -3,6 +3,7 @@ title: Validator Setup
 description: Setup Process for new SKALE Validator
 ---
 import { Step, Steps, Aside } from "@astrojs/starlight/components";
+import { PostRegistrationChecklist } from "../../../../components/PostRegistrationChecklist";
 
 <Steps>
 
@@ -411,4 +412,370 @@ import { Step, Steps, Aside } from "@astrojs/starlight/components";
     ### 2.9 Backup sgx data
 
     It's strongly recommended to backup sgx data regularly. The guide can be found [here](https://github.com/skalenetwork/sgxwallet/blob/stable/docs/backup-procedure.md).
+
+3. ## Node Setup
+
+    <Aside type="note">
+    Due date: 23rd of each month
+    </Aside>
+
+    After Setting up SGX Wallet and create certifications, validators can download the SKALE Node CLI executables register and maintain your SKALE node.
+    This process downloads docker container images from docker hub and spins up SKALE Node functionalities. Some base containers such as SKALE Admin,
+    Bounty, TransactionManager will be created during installation for each node.
+
+    This document contains instructions on how to setup node using SKALE Node CLI.
+
+    ### 3.1 Prepare Server
+
+    Node server should follow compliance requirements which will be checked during installing SKALE node software.
+    Please make sure:
+
+    **General requirements**
+
+    - A Linux x86_64 machine
+    - Ubuntu 20.04 (focal)
+    - Separate not mounted block device - 2 Tb
+    - 8 physical cores
+    - 32GB RAM
+    - 16GB Swap
+
+    More information can be found here: [Compliance requirements](/ecosystem/validators/compliance-requirements)
+
+    ### 3.2 Install Packages
+
+    Before setting up node you should make sure that the following software is installed:
+
+    - docker
+    - docker-compose (preferably 1.27.4)
+    - iptables-persistent 
+    - lvm2 
+
+    <Aside type="note" title="Important">
+    After docker installation make sure that the `live-restore` option is enabled in `/etc/docker/daemon.json`. See more info in the [docker docs](https://docs.docker.com/config/containers/live-restore/).
+    </Aside>
+    
+    <Aside>
+    You can install iptables-persistent using the following commands:
+    </Aside>
+
+    ```shell
+    echo iptables-persistent iptables-persistent/autosave_v4 boolean true | sudo debconf-set-selections
+    echo iptables-persistent iptables-persistent/autosave_v6 boolean true | sudo debconf-set-selections
+    sudo apt install iptables-persistent -y
+    ```
+
+    <Aside type="note" title="Important">
+    You should carefully control any automatic updates. In general avoid updates to the Linux kernel, docker, docker-compose, btrfs-progs.
+    And take care when updating lvm2, iptables, iptables-persistent, and python. Please see the [FAQ - Node update procedure for more information](/ecosystem/validators/faq#node-update-procedure).
+    </Aside>
+
+    If you have any concerns or questions, please don't hesitate to reach out to SKALE Team leads on http://skale.chat/[Discord].
+
+    ### 3.3 Download Node CLI binary
+
+    ### 3.4 Download the Executable
+
+    ```shell
+    sudo -E bash -c "curl -L {node-cli} >  /usr/local/bin/skale"
+    ```
+
+    ### 3.5 Apply executable permissions to the downloaded binary:
+
+    ```shell
+    chmod +x /usr/local/bin/skale
+    ```
+
+    ### 3.6 Test the Installation
+
+    ```shell
+    sudo skale --help
+    ```
+
+    <Aside type="note" title="Important">
+    You should run node-cli commands using sudo
+    </Aside>
+
+    More information can be found [here](/ecosystem/validators/node-cli/overview).
+
+
+    ### 3.7 Configure .env
+
+    Configuration parameters are passed to Node CLI through .env file. It should contain the following variables:
+
+    -   `CONTAINERS_CONFIG_STREAM` - git branch with containers versions config
+    -   `DISK_MOUNTPOINT` - Attached storage block device 
+    -   `DOCKER_LVMPY_STREAM` - git branch of docker lvmpy volume driver for schains
+    -   `ENDPOINT` - RPC endpoint of the node in the network where SKALE manager is deployed (`http` or `https`)
+    -   `FILEBEAT_HOST` - URL to the Filebeat log server
+    -   `IMA_CONTRACTS_ABI_URL` - URL to IMA contracts ABI and addresses
+    -   `IMA_ENDPOINT` - IMA endpoint to connect (should be the same as `ENDPOINT`).
+    -   `MANAGER_CONTRACTS_ABI_URL` - URL to SKALE Manager contracts ABI and addresses
+    -   `SGX_SERVER_URL` - URL to SGX server in the network (i.e. http(s)://host:port, do not add a trailing "/" after the port number )
+    -   `ENV_TYPE` - network type (mainnet/testnet)
+
+
+    `ENDPOINT`, `IMA_ENDPOINT`, `SGX_SERVER_URL`, `DISK_MOUNTPOINT` are server dependent. Other options depend on the network type.
+
+    For the `{ENV_TYPE}` network .env will look like:
+
+    ```.env
+    CONTAINER_CONFIGS_STREAM=3.0.1
+    DOCKER_LVMPY_STREAM=1.0.2-stable.0
+    FILEBEAT_HOST=filebeat.mainnet.skalenodes.com:5000
+    MANAGER_CONTRACTS_ABI_URL=https://raw.githubusercontent.com/skalenetwork/skale-network/master/releases/mainnet/skale-manager/1.11.0/skale-manager-1.11.0-mainnet-abi.json
+    IMA_CONTRACTS_ABI_URL=https://raw.githubusercontent.com/skalenetwork/skale-network/master/releases/mainnet/IMA/1.5.0/mainnet/abi.json
+    ENV_TYPE=mainnet
+    DISK_MOUNTPOINT=[DISK_MOUNTPOINT]
+    IMA_ENDPOINT=[IMA_ENDPOINT]
+    ENDPOINT=[ENDPOINT]
+    SGX_SERVER_URL=[SGX_SERVER_URL] # Do not add a trailing "/" after the port number.
+    ```
+
+    It's possible to configure Telegram based alert system by providing the following options:
+
+    - `TG_API_KEY` - Telegram API key
+    - `TG_CHAT_ID` - Telegram chat ID
+
+    ### 3.8 Initialize node
+
+    To install node on your server you should run `skale node init`. It will create necessary configuration files and run base services and containers. 
+
+    ```shell
+    sudo skale node init .env 
+    ```
+
+    **Example Output:**
+
+    ```shell
+    48914619bcd3: Pull complete
+    db7a07cce60c: Pull complete
+    d285532a5ada: Pull complete
+    8646278c4014: Pull complete
+    3a12d6e582e7: Pull complete
+    0a3d98d81a07: Pull complete
+    43b3a182ba00: Pull complete
+    Creating monitor_filebeat          ... done
+    Creating skale_transaction-manager ... done
+    Creating skale_watchdog            ... done
+    Creating skale_admin               ... done
+    Creating skale_bounty              ... done
+    Creating skale_api                 ... done
+    ```
+
+    You can verify installation procedure by running: 
+
+    ```shell
+    sudo skale wallet info
+
+    ```
+
+    **Output:**
+
+    ```shell
+    Address: <your-skale-node-wallet-address>
+    ETH balance: 1.0 ETH
+    SKALE balance: 0 SKALE
+
+    ```
+
+    The common problem is network misconfiguration between the node and SGXWallet. You can recheck connection status using `skale health sgx`:
+
+    ```shell
+    sudo skale health sgx
+
+    ```
+
+    **Output:**
+
+    ```shell
+    SGX server status:
+    ┌────────────────┬──────────────────────────┐
+    │ SGX server URL │ <sgx-url>                │
+    ├────────────────┼──────────────────────────┤
+    │ Status         │ CONNECTED                │
+    └────────────────┴──────────────────────────┘
+
+    ```
+
+    ### 3.9 Setup SSL Certificates
+
+    #### 3.9.1 Setup IP Redirects
+
+    You will need to setup redirects from each node IP to the node domain.
+
+    #### 3.9.2 Issue SSL Certificates
+
+    You will need SSL certs issued by one of the Trusted CAs. Once you've decided on the certificate issuer you have several
+    options - issue a separate certificate for each subdomain (node-0.awesome-validator.com, node-1.awesome-validator.com) or
+    issue a single Wildcard SSL for all nodes (\*.awesome-validator.com). As a result, you should have 2 main files saved and
+    copied to the respective nodes:
+
+    - Certificate file (for example, fullchain.pem or cert.pem)
+    - Private key file (for example, privkey.pem, pk.pem)
+
+    #### 3.9.3 Upload certificates to the SKALE Node
+
+    Once you copied the certificate and private key file, all you have to do is to run the following command:
+
+    ```shell
+    sudo skale ssl upload -c $PATH_TO_CERT_FILE -k $PATH_TO_KEY_FILE
+    ```
+
+    #### 3.9.4 SSL Status
+
+    Status of the SSL certificates on the node
+
+    ```shell
+    sudo skale ssl status
+    ```
+
+    For more details, please see [Node SSL docs](/ecosystem/validators/node-cli/node-ssl-setup).
+
+
+    ### 3.10 Fund Node wallet with ETH
+
+    Some of the node operations send ETH mainnet transaction (e.g. chain creation). So the node wallet should have at least 1 ETH
+
+    To get the address you should run `skale wallet info` command.
+
+    <Aside type="note">
+    Spent ETH is reimbursed after the transaction was completed.
+    </Aside>
+
+
+    ### 3.11 Sign Validator ID using SGXWallet
+
+    Using *validator-cli* check your validator ID:
+
+    ```shell
+    sk-val validator ls
+    ```
+
+    Get your SKALE node signature by running Node CLI command. 
+
+    ```shell
+    sudo skale node signature [VALIDATOR_ID]
+
+    ```
+
+    **Output:**
+
+    ```shell
+    Signature: <your-signature>
+    ```
+
+    ### 3.12 Link SKALE wallet address to your validator account using Validator CLI
+
+    To successfully register new node you should bind node address and validator entity using *validator-cli* `link-address`:
+
+    ```shell
+     sk-val validator link-address [NODE_ADDRESS] [SIGNATURE]
+    ```
+
+    <Aside type="note">
+    You can find node address by executing `skale wallet info` command
+    </Aside>
+
+    Optional arguments:
+
+    - `--pk-file` - Path to file with private key (only for `software` wallet type)
+    - `--gas-price` - Gas price value in Gwei for transaction (if not specified doubled average network value will be used)
+    - `--yes` - Confirmation flag
+
+    ### 3.13 Backup Node
+
+    We strongly recommend to regularly backup node data. The critical information stored `~/.skale` directory.
+
+    The `skale node backup` command archives the data which you can download and store somewhere else.
+
+    To restore the node you should use `skale node restore`
+
+    More information can be found xref:node-cli::index.adoc#_node_backup[here].
+
+    ### 3.14 Accept Delegations
+
+    Every delegation need to be accepted. You can do it using `sk-val validator accept-delegation` command:
+
+    ```shell
+    sk-val validator accept-delegation --delegation-id [DELEGATION-ID] 
+    ```
+
+    Required arguments:
+
+    - `--delegation-id` - Delegation id to accept
+
+    Optional arguments:
+
+    - `--pk-file` - Path to file with private key (only for software wallet type)
+    - `--gas-price` - Gas price value in Gwei for transaction (if not specified doubled average network value will be used)
+    - `--yes` - Confirmation flag
+
+    You can get [DELEGATION-ID] by running `sk-val validator delegations`:
+
+    ```shell
+    sk-val validator delegations [VALIDATOR_ID]
+    ```
+
+    You will see your pending delegation (`PENDING` status)  as well as already accepted ones (`DELEGATED` status).
+
+    <Aside type="note">
+    To register the node validator must meet the Minimum Staking Requirement (MSR) of 20,000,000 SKL.
+    </Aside>
+
+4. ## Register Node in SKALE Network
+
+    ### 4.1 Register Node with Node CLI
+
+    <Aside type="note" title="Important">
+    Before proceeding, you will need to have at least  **1 ETH**. Also amount of delegated skale tokens need to be more or equal to minimum staking amount.
+    </Aside>
+
+    To register with the network, you will need to provide the following:
+
+    -  Node name
+    -  Machine public IP
+    -  Domain name
+
+    ```shell
+    sudo skale node register --name [NODE_NAME] --ip [NODE_IP] --domain [DOMAIN_NAME]
+
+    ```
+
+    Optional arguments:
+
+    - `--port` - beginning of the port range that will be used for skale schains (`10000` by default)
+
+    **Output:**
+
+    ```shell
+    Node registered in SKALE manager. For more info run: skale node info
+    ```
+
+    ### 4.2 Check Node Status
+
+    You can check the status of your node, and ensure that it's properly registered with the SKALE Network.
+
+    ```shell
+    sudo skale node info
+    ```
+
+    **Output:**
+
+    ```shell
+    # Node info
+    Name: <Node name>
+    ID: <Node ID>
+    IP: <IP of Machine>
+    Public IP: <Public IP of Machine>
+    Port: <Node port>
+    Domain name: <Node domain name>
+    Status: Active
+    ```
+
+5. ## Post Registration Checks
+    <Aside type="note">
+        The checkboxes below will save to local storage so you can use this as a checklist.
+    </Aside>
+    <br />
+    <PostRegistrationChecklist client:load />
 </Steps>
